--- a/templates/submitlog_templateDVP.html
+++ b/templates/submitlog_templateDVP.html
@@ -185,7 +185,7 @@
 		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
 			<label class="col-xs-3 control-label">Download</label>
 			<div class="col-xs-9">
-				<div class="form-control-static"><%%VALUE(download)%%></div>
+				<div class="form-control-static"><a id="download-link" href="link.php?t=submitlog&f=download&i=<%%VALUE(submid)%%>" target="_blank"><%%VALUE(download)%%></a><script>jQuery(function(){ var e_download = '<%%VALUE(download)%%>'; if(e_download == '' || e_download == '&nbsp;' || e_download == 'blank.gif') jQuery('#download-link').hide(); });</script></div>
 			</div>
 		</div>
 		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
