--- a/templates/submitlog_templateDV.html
+++ b/templates/submitlog_templateDV.html
@@ -271,7 +271,7 @@
 				<div class="form-group">
 					<label for="affiliate" class="control-label col-lg-3">Affiliate</label>
 					<div class="col-lg-9">
-						<input maxlength="40" type="text" class="form-control" name="affiliate" id="affiliate" value="<%%VALUE(affiliate)%%>">
+						<%%COMBO(affiliate)%%>
 					</div>
 				</div>
 
