--- a/templates/submitlog_templateDVP.html
+++ b/templates/submitlog_templateDVP.html
@@ -203,7 +203,7 @@
 		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
 			<label class="col-xs-3 control-label">Affiliate</label>
 			<div class="col-xs-9">
-				<div class="form-control-static"><%%VALUE(affiliate)%%></div>
+				<div class="form-control-static"><%%COMBOTEXT(affiliate)%%></div>
 			</div>
 		</div>
 		<div class="form-group" style="border-bottom: dotted 1px #DDD;">
